@@ -303,15 +303,9 @@ def test_server_name_interpolation():
     adapter = map.bind_to_environ(env, server_name=server_name)
     assert adapter.match() == ('alt', {})
 
-    try:
-        env = create_environ('/', 'http://%s/' % server_name)
-        adapter = map.bind_to_environ(env, server_name='foo')
-    except ValueError, e:
-        msg = str(e)
-        assert 'provided (%r)' % 'foo' in msg
-        assert 'environment (%r)' % server_name in msg
-    else:
-        assert False, 'expected exception'
+    env = create_environ('/', 'http://%s/' % server_name)
+    adapter = map.bind_to_environ(env, server_name='foo')
+    assert adapter.subdomain == '<invalid>'
 
 
 def test_rule_emptying():
@@ -532,7 +526,8 @@ def test_external_building_with_port_bind_to_environ_wrong_servername():
         Rule('/', endpoint='index'),
     ])
     environ = create_environ('/', 'http://example.org:5000/')
-    assert_raises(ValueError, lambda: map.bind_to_environ(environ, server_name="example.org"))
+    adapter = map.bind_to_environ(environ, server_name="example.org")
+    assert adapter.subdomain == '<invalid>'
 
 
 def test_converter_parser():
